--- a/angularProject.html
+++ b/angularProject.html
@@ -1,39 +1,75 @@
-<!DOCTYPE html>  
-<html lang="en">  
-<head>  
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
     <meta charset="utf 8">
     <title>PRN</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>  
-<body ng-app="app"> <!-- app= module name, ng-app=directive to define the application scope-->
-    <div class="container-fluid" ng-controller="PrimaryCtrl"> <!--PrimaryCtrl=controller ng-controller=define the controller scope-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+</head>
+
+<body ng-app="app">
+    <!-- app= module name, ng-app=directive to define the application scope-->
+    <div class="container-fluid" ng-controller="PrimaryCtrl">
+        <!--PrimaryCtrl=controller ng-controller=define the controller scope-->
         <style>
+            @font-face {
+                font-family: 'GothamBold';
+                src: url(Gotham-Bold.otf);
+                font-weight: bold;
+            }
+            @font-face {
+                font-family: 'GothamBook';
+                src: url(Gotham-Book.otf);
+                font-weight: normal;
+            }
+            @font-face {
+                font-family: 'GothamMedium';
+                src: url(Gotham-Medium.otf);
+                font-weight: 400;
+            }
+
+            body {
+                font-family: 'Gotham';
+            }
+
             .blue-text {
                 color: #171B60;
             }
         </style>
         <h1 class="blue-text text-center">{{ message }}</h1>
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name | uppercase}}</h5>
-              <h6 class="card-subtitle mb-2 text-muted"># OF PATIENTS ENROLLED</h6>
-              <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
+        <div class="card-deck">
+            <div class="card border border-primary" style="width: 18rem;">
+                <div class="card-header">
+                    {{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name | uppercase}}
+                </div>
+                <div class="card-body">
+                    <img src="DRY_EYE.png" alt="dry eye" class="img-responsive float-left">
+                    <h6 class="card-subtitle mb-2 text-muted">{{ text }}</h6>
+                    <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
+                </div>
             </div>
-          </div>
-
+        </div>
     </div>
-
 
     <script src="https://code.angularjs.org/1.6.9/angular.js"></script>
     <script>
-        angular.module("app", []).controller("PrimaryCtrl", function($scope) {
-            $scope.message  = "Welcome Shivani!";
-            $scope.jsonData = {"count":1,"results":[{"id":null,"type":null,"DRY_EYE_AUTOSHIPS":{"val":"42","product":[{"name":"dry eye omega benefits","tag":"de3"}]},"DRY_EYE_LIQUID_AUTOSHIPS":{"val":"13","product":[{"name":"dry eye omega benefits liquid","tag":"de"}]},"NURETIN_AUTOSHIPS":{"val":"21","product":[{"name":"nuretin","tag":""}]},"EYE_OMEGA_AUTOSHIPS":{"val":"19","product":[{"name":"eye omega advantage","tag":"eo"}]},"MACULAR_VITAMIN_AUTOSHIPS":{"val":"8","product":[{"name":"macular vitamin benefits","tag":"mv"}]},"OTHER_PRODUCT_AUTOSHIPS":{"val":"4","product":[{"name":"other","tag":""}]}}],"success":true};            
+        angular.module("app", []).controller("PrimaryCtrl", function ($scope) {
+            $scope.message = "Welcome Shivani!";
+            $scope.text = "# OF PATIENTS ENROLLED";
+            $scope.jsonData = { "count": 1, "results": [{ "id": null, "type": null, "DRY_EYE_AUTOSHIPS": { "val": "42", "product": [{ "name": "dry eye omega benefits", "tag": "de3" }] }, "DRY_EYE_LIQUID_AUTOSHIPS": { "val": "13", "product": [{ "name": "dry eye omega benefits liquid", "tag": "de" }] }, "NURETIN_AUTOSHIPS": { "val": "21", "product": [{ "name": "nuretin", "tag": "" }] }, "EYE_OMEGA_AUTOSHIPS": { "val": "19", "product": [{ "name": "eye omega advantage", "tag": "eo" }] }, "MACULAR_VITAMIN_AUTOSHIPS": { "val": "8", "product": [{ "name": "macular vitamin benefits", "tag": "mv" }] }, "OTHER_PRODUCT_AUTOSHIPS": { "val": "4", "product": [{ "name": "other", "tag": "" }] } }], "success": true };
 
         });
-    </script> 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
