--- a/angularProject.html
+++ b/angularProject.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf 8">
     <title>PRN</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <style>
         @font-face {
             font-family: 'GothamBold';
@@ -38,71 +38,65 @@
             margin-right: -50%;
             transform: translate(-50%, -50%)
         }
-        .card-header{
-            min-height: 100px;
-            border-bottom: none;
-        }
+
         .blueCard {
-            border-color: #55C7F1;
-            border-radius: 0mm;
-            border-width: thick;
+           margin-right: 15px;  
+           border: 4px solid #55C7F1;         
         }
+
         .blueCardHeader {
-            color : white !important;
-            background-color:#55C7F1 ;
-            text-align:left;
+            color: white !important;
+            background-color: #55C7F1;
         }
+
         .orangeCard {
-            border-color:#D97953;
+            border-color: #D97953;
             border-radius: 0mm;
             border-width: thick;
         }
+
         .orangeCardHeader {
-            color : white !important;
+            color: white !important;
             background-color: #D97953;
         }
+
         .purpleCard {
-            border-color:#A683B8;
+            border-color: #A683B8;
             border-radius: 0mm;
             border-width: thick;
         }
+
         .purpleCardHeader {
-            color : white !important;
-            background-color:#A683B8;
+            color: white !important;
+            background-color: #A683B8;
         }
+
         .cyanCard {
-            border-color:#65C1AE;
+            border-color: #65C1AE;
             border-radius: 0mm;
             border-width: thick;
         }
+
         .cyanCardHeader {
-            color : white !important;
+            color: white !important;
             background-color: #65C1AE;
         }
 
-        .pTag{
+        .pTag {
             font-family: 'GothamBold';
             font-size: 3rem;
         }
-        .pName{
+
+        .pName {
             font-family: 'GothamBook';
-            font-size: 20px;
-            text-align:left;
-            text-overflow: ellipsis;
-            margin-left: 5px;
+            font-size: 1rem;
+            word-wrap: break-word;
         }
-
-        .card-body {
-            width: 45%;
-            height: 45%;
-        }
-
-        .card-text{
-            color:#07b5f5;
+        .card-text {
+            color: #07b5f5;
             font-family: 'GothamMedium';
-            font-size: 6rem;
+            font-size: 5rem;            
         }
-
     </style>
 </head>
 
@@ -111,102 +105,92 @@
     <section>
         <div class="container-fluid" ng-controller="PrimaryCtrl">
             <!--PrimaryCtrl=controller ng-controller=define the controller scope-->
-            <div class="row">
+            <div class="row row-content align-items-center">
 
-                <div class="col">
-                    <div class="card blueCard">
-                        <div class="card-header blueCardHeader rounded-0">
-                            <div class="float-left pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
-                                capitalizeWords}}</div>
-                            <div class="pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
-                                capitalizeWords}}</div>
-                        </div>
-                        <div class="card-body">
-
-                            <div class="media">
-                                <img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye">
-                                <div class="media-body">
-                                  <h6 class="mt-0">{{ text }}</h6>
-                                  <hr>
-                                  <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
-                                </div>
-                            </div>
-
+                <div class="col blueCard">
+                    <div class="row blueCardHeader">
+                        <div class="col pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
+                            capitalizeWords}}</div>
+                        <div class="col pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
+                            capitalizeWords}}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col justify-content-center"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
+                        <div class="col">
+                            <p>{{ text }}</p>
+                            <hr>
+                            <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col">
-                    <div class="card blueCard">
-                        <div class="card-header blueCardHeader rounded-0">
-                            <div class="float-left pTag">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.product[0].tag |
-                                capitalizeWords}}</div>
-                            <div class="pName">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.product[0].name |
-                                capitalizeWords}}</div>
-                        </div>
-                        <div class="card-body">
-                            <div class="media">
-                                <img class="img-fluid" src="DRY_EYE_LIQUID.png" alt="Dry Eye Liquid">
-                                <div class="media-body">
-                                  <h6 class="mt-0">{{ text }}</h6>
-                                  <p class="card-text">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.val}}</p>
-                                </div>
-                            </div>
+                <div class="col blueCard">
+                    <div class="row blueCardHeader">
+                        <div class="col pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
+                            capitalizeWords}}</div>
+                        <div class="col pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
+                            capitalizeWords}}</div>
+                    </div>
+                    <div class="row h-75">
+                        <div class="col"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
+                        <div class="col">
+                            <h6 class="mt-3">{{ text }}</h6>
+                            <hr>
+                            <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card orangeCard">
-                        <div class="card-header orangeCardHeader rounded-0">                            
-                            <div class="pTag text-center">{{jsonData.results[0].NURETIN_AUTOSHIPS.product[0].name}}</div>
-                        </div>
-                        <div class="card-body">
-                            <div class="media">
-                                <img class="img-fluid" src="NURETIN.png" alt="">
-                                <div class="media-body">
-                                  <h5 class="mt-0">{{ text }}</h5>
-                                  <p class="card-text">{{jsonData.results[0].NURETIN_AUTOSHIPS.val}}</p>
-                                </div>
-                            </div>                            
+                <div class="col blueCard">
+                    <div class="row blueCardHeader">
+                        <div class="col pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
+                            capitalizeWords}}</div>
+                        <div class="col pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
+                            capitalizeWords}}</div>
+                    </div>
+                    <div class="row h-75">
+                        <div class="col"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
+                        <div class="col">
+                            <h6 class="mt-3">{{ text }}</h6>
+                            <hr>
+                            <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card purpleCard">
-                        <div class="card-header purpleCardHeader rounded-0">                            
-                            <div class="text-center">{{jsonData.results[0].EYE_OMEGA_AUTOSHIPS.product[0].name | capitalizeWords}}</div>
-                        </div>
-                        <div class="card-body">
-                            <div class="media">
-                                <img class="img-fluid" src="EYE_OMEGA.png" alt="">
-                                <div class="media-body">
-                                  <h5 class="mt-0">{{ text }}</h5>
-                                  <p class="card-text">{{jsonData.results[0].EYE_OMEGA_AUTOSHIPS.val}}</p>
-                                </div>
-                            </div>                            
+                <div class="col blueCard">
+                    <div class="row blueCardHeader">
+                        <div class="col pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
+                            capitalizeWords}}</div>
+                        <div class="col pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
+                            capitalizeWords}}</div>
+                    </div>
+                    <div class="row h-75">
+                        <div class="col"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
+                        <div class="col">
+                            <h6 class="mt-3">{{ text }}</h6>
+                            <hr>
+                            <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card cyanCard">
-                        <div class="card-header cyanCardHeader rounded-0">                            
-                            <div class="text-center">{{jsonData.results[0].MACULAR_VITAMIN_AUTOSHIPS.product[0].name | capitalizeWords}}</div>
-                        </div>
-                        <div class="card-body">
-                            <div class="media">
-                                <img class="img-fluid" src="MACULAR_VITAMIN.png" alt="">
-                                <div class="media-body">
-                                  <h5 class="mt-0">{{ text }}</h5>
-                                  <p class="card-text">{{jsonData.results[0].MACULAR_VITAMIN_AUTOSHIPS.val}}</p>
-                                </div>
-                            </div>                            
+                <div class="col blueCard">
+                    <div class="row blueCardHeader">
+                        <div class="col pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
+                            capitalizeWords}}</div>
+                        <div class="col pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
+                            capitalizeWords}}</div>
+                    </div>
+                    <div class="row h-75">
+                        <div class="col"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
+                        <div class="col">
+                            <h6 class="mt-3">{{ text }}</h6>
+                            <hr>
+                            <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
                 </div>
-                
-
             </div>
         </div>
+
     </section>
     <script src="https://code.angularjs.org/1.6.9/angular.js"></script>
     <script>
@@ -230,8 +214,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
 </body>
 
