--- a/angularProject.html
+++ b/angularProject.html
@@ -3,108 +3,91 @@
 
 <head>
     <meta charset="utf 8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>PRN</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />      
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css" />      
+    <title>PRN</title>    
 </head>
 
 <body ng-app="app">
     <!-- app= module name, ng-app=directive to define the application scope-->
-    <section>
-        <div class="container-fluid" ng-controller="PrimaryCtrl">
+        <div class="container-fluid center-me" ng-controller="PrimaryCtrl">
             <!--PrimaryCtrl=controller ng-controller=define the controller scope-->
             <div class="row">
 
-                <div class="col-md-4 col-lg blueCard">
-                    <div class="row blueCardHeader">
-                        <div class="col pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
+                <div class="col-md-4 col-lg card blueCard g-0">
+                    <div class="row CardHeader blueCardHeader g-0">
+                        <div class="col-6 pTag g-0">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
                             capitalizeWords}}</div>
-                        <div class="col pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
+                        <div class="col-6 pName pt-2 g-0">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
                             capitalizeWords}}</div>
                     </div>
-                    <div class="row">
-                        <div class="col justify-content-center"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye">
-                        </div>
-                        <div class="col">
-                            <p>{{ text }}</p>
-                            <hr>
-                            <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
+                    <div class="row g-0">
+                        <div class="col-6 justify-content-center"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
+                        <div class="col-6">
+                            <p class="mt-3 patientText">{{ text }}</p>                            
+                            <span class="card-text blue-card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</span>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-4 col-lg blueCard">
-                    <div class="row blueCardHeader">
-                        <div class="col pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
+                <div class="col-md-4 col-lg card blueCard g-0">
+                    <div class="row  CardHeader blueCardHeader g-0">
+                        <div class="col-6 pTag g-0">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.product[0].tag |
                             capitalizeWords}}</div>
-                        <div class="col pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
+                            <div class="col-6 pName pt-2 g-0">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.product[0].name |
                             capitalizeWords}}</div>
                     </div>
-                    <div class="row h-75">
-                        <div class="col"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
-                        <div class="col">
-                            <h6 class="mt-3">{{ text }}</h6>
-                            <hr>
-                            <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
+                    <div class="row g-0">
+                        <div class="col-6 justify-content-center"><img class="img-fluid" src="DRY_EYE_LIQUID.png" alt="Dry Eye Liquid"></div>
+                        <div class="col-6 g-0">
+                            <p class="mt-3 patientText">{{ text }}</p>                            
+                            <p class="card-text blue-card-text">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-lg blueCard">
-                    <div class="row blueCardHeader">
-                        <div class="col pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
-                            capitalizeWords}}</div>
-                        <div class="col pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
-                            capitalizeWords}}</div>
+                <div class="col-md-4 col-lg card orangeCard g-0">
+                    <div class="row CardHeader orangeCardHeader g-0">
+                        <div class="col">{{jsonData.results[0].NURETIN_AUTOSHIPS.product[0].name}}</div>
                     </div>
-                    <div class="row h-75">
-                        <div class="col"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
-                        <div class="col">
-                            <h6 class="mt-3">{{ text }}</h6>
-                            <hr>
-                            <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
+                    <div class="row g-0">
+                        <div class="col-6 justify-content-center"><img class="img-fluid" src="NURETIN.png" alt="Nuretin"></div>
+                        <div class="col-6 g-0">
+                            <p class="mt-3 patientText">{{ text }}</p>                            
+                            <p class="card-text orange-card-text">{{jsonData.results[0].NURETIN_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-lg blueCard">
-                    <div class="row blueCardHeader">
-                        <div class="col pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
-                            capitalizeWords}}</div>
-                        <div class="col pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
-                            capitalizeWords}}</div>
+                <div class="col-md-4 col-lg card purpleCard g-0">
+                    <div class="row CardHeader purpleCardHeader g-0">
+                        <div class="col">{{jsonData.results[0].EYE_OMEGA_AUTOSHIPS.product[0].name | capitalizeWords}}</div>
                     </div>
-                    <div class="row h-75">
-                        <div class="col"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
-                        <div class="col">
-                            <h6 class="mt-3">{{ text }}</h6>
-                            <hr>
-                            <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
+                    <div class="row g-0">
+                        <div class="col-6 justify-content-center"><img class="img-fluid" src="EYE_OMEGA.png" alt="Eye Omega"></div>
+                        <div class="col-6 g-0">
+                            <p class="mt-3 patientText">{{ text }}</p>                            
+                            <p class="card-text purple-card-text">{{jsonData.results[0].EYE_OMEGA_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-4 col-lg blueCard">
-                    <div class="row blueCardHeader">
-                        <div class="col pTag">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
-                            capitalizeWords}}</div>
-                        <div class="col pName">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
-                            capitalizeWords}}</div>
+                <div class="col-md-4 col-lg card cyanCard g-0">
+                    <div class="row CardHeader cyanCardHeader g-0">
+                        <div class="col">{{jsonData.results[0].MACULAR_VITAMIN_AUTOSHIPS.product[0].name | capitalizeWords}}</div>
                     </div>
-                    <div class="row h-75">
-                        <div class="col"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
-                        <div class="col">
-                            <h6 class="mt-3">{{ text }}</h6>
-                            <hr>
-                            <p class="card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
+                    <div class="row g-0">
+                        <div class="col-6 justify-content-center"><img class="img-fluid" src="MACULAR_VITAMIN.png" alt="Macular Vitamin"></div>
+                        <div class="col-6 g-0">
+                            <p class="mt-3 patientText">{{ text }}</p>                            
+                            <p class="card-text cyan-card-text">{{jsonData.results[0].MACULAR_VITAMIN_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-    </section>
     <script src="https://code.angularjs.org/1.6.9/angular.js"></script>
     <script>
         var app = angular.module('app', []);
