--- a/angularProject.html
+++ b/angularProject.html
@@ -28,7 +28,7 @@
                         <div class="col-6 justify-content-center"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
                         <div class="col-6">
                             <p class="mt-3 patientText">{{ text }}</p>                            
-                            <span class="card-text blue-card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</span>
+                            <p class="card-text blue-card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
                 </div>
