Added mb-0 class to all patientText

--- a/angularProject.html
+++ b/angularProject.html
@@ -27,7 +27,7 @@
                     <div class="row g-0">
                         <div class="col-6 justify-content-center"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
                         <div class="col-6">
-                            <p class="mt-3 patientText">{{ text }}</p>                            
+                            <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
                             <p class="card-text blue-card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                     <div class="row g-0">
                         <div class="col-6 justify-content-center"><img class="img-fluid" src="DRY_EYE_LIQUID.png" alt="Dry Eye Liquid"></div>
                         <div class="col-6 g-0">
-                            <p class="mt-3 patientText">{{ text }}</p>                            
+                            <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
                             <p class="card-text blue-card-text">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                     <div class="row g-0">
                         <div class="col-6 justify-content-center"><img class="img-fluid" src="NURETIN.png" alt="Nuretin"></div>
                         <div class="col-6 g-0">
-                            <p class="mt-3 patientText">{{ text }}</p>                            
+                            <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
                             <p class="card-text orange-card-text">{{jsonData.results[0].NURETIN_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                     <div class="row g-0">
                         <div class="col-6 justify-content-center"><img class="img-fluid" src="EYE_OMEGA.png" alt="Eye Omega"></div>
                         <div class="col-6 g-0">
-                            <p class="mt-3 patientText">{{ text }}</p>                            
+                            <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
                             <p class="card-text purple-card-text">{{jsonData.results[0].EYE_OMEGA_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                     <div class="row g-0">
                         <div class="col-6 justify-content-center"><img class="img-fluid" src="MACULAR_VITAMIN.png" alt="Macular Vitamin"></div>
                         <div class="col-6 g-0">
-                            <p class="mt-3 patientText">{{ text }}</p>                            
+                            <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
                             <p class="card-text cyan-card-text">{{jsonData.results[0].MACULAR_VITAMIN_AUTOSHIPS.val}}</p>
                         </div>
                     </div>
