--- a/angularProject.html
+++ b/angularProject.html
@@ -15,76 +15,83 @@
     <!-- app= module name, ng-app=directive to define the application scope-->
         <div class="container-fluid center-me" ng-controller="PrimaryCtrl">
             <!--PrimaryCtrl=controller ng-controller=define the controller scope-->
-            <div class="row">
-
-                <div class="col-md-4 col-lg card blueCard g-0">
-                    <div class="row CardHeader blueCardHeader g-0">
-                        <div class="col-6 pTag g-0">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
-                            capitalizeWords}}</div>
-                        <div class="col-6 pName pt-2 g-0">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
-                            capitalizeWords}}</div>
-                    </div>
-                    <div class="row g-0">
-                        <div class="col-6 justify-content-center"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
-                        <div class="col-6">
-                            <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
-                            <p class="card-text blue-card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
+                <div class="col">
+                    <div class="card blueCard g-0">
+                        <div class="row CardHeader blueCardHeader g-0">
+                            <div class="col-6 pTag g-0">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
+                                capitalizeWords}}</div>
+                            <div class="col-6 pName pt-2 g-0">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].name |
+                                capitalizeWords}}</div>
+                        </div>
+                        <div class="row g-0">
+                            <div class="col-6 justify-content-center"><img class="img-fluid" src="DRY_EYE.png" alt="Dry Eye"></div>
+                            <div class="col-6">
+                                <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
+                                <p class="card-text blue-card-text">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.val}}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-4 col-lg card blueCard g-0">
-                    <div class="row  CardHeader blueCardHeader g-0">
-                        <div class="col-6 pTag g-0">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.product[0].tag |
-                            capitalizeWords}}</div>
-                            <div class="col-6 pName pt-2 g-0">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.product[0].name |
-                            capitalizeWords}}</div>
-                    </div>
-                    <div class="row g-0">
-                        <div class="col-6 justify-content-center"><img class="img-fluid" src="DRY_EYE_LIQUID.png" alt="Dry Eye Liquid"></div>
-                        <div class="col-6 g-0">
-                            <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
-                            <p class="card-text blue-card-text">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.val}}</p>
+                <div class="col">
+                    <div class="card blueCard g-0">
+                        <div class="row  CardHeader blueCardHeader g-0">
+                            <div class="col-6 pTag g-0">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.product[0].tag |
+                                capitalizeWords}}</div>
+                                <div class="col-6 pName pt-2 g-0">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.product[0].name |
+                                capitalizeWords}}</div>
+                        </div>
+                        <div class="row g-0">
+                            <div class="col-6 justify-content-center"><img class="img-fluid" src="DRY_EYE_LIQUID.png" alt="Dry Eye Liquid"></div>
+                            <div class="col-6 g-0">
+                                <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
+                                <p class="card-text blue-card-text">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.val}}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-lg card orangeCard g-0">
-                    <div class="row CardHeader orangeCardHeader g-0">
-                        <div class="col">{{jsonData.results[0].NURETIN_AUTOSHIPS.product[0].name}}</div>
+                <div class="col">
+                    <div class="card orangeCard g-0">
+                        <div class="row CardHeader orangeCardHeader g-0">
+                            <div class="col">{{jsonData.results[0].NURETIN_AUTOSHIPS.product[0].name}}</div>
+                        </div>
+                        <div class="row g-0">
+                            <div class="col-6 justify-content-center"><img class="img-fluid" src="NURETIN.png" alt="Nuretin"></div>
+                            <div class="col-6 g-0">
+                                <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
+                                <p class="card-text orange-card-text">{{jsonData.results[0].NURETIN_AUTOSHIPS.val}}</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="row g-0">
-                        <div class="col-6 justify-content-center"><img class="img-fluid" src="NURETIN.png" alt="Nuretin"></div>
-                        <div class="col-6 g-0">
-                            <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
-                            <p class="card-text orange-card-text">{{jsonData.results[0].NURETIN_AUTOSHIPS.val}}</p>
+                </div> 
+                <div class="col">
+                    <div class="card purpleCard g-0">
+                        <div class="row CardHeader purpleCardHeader g-0">
+                            <div class="col">{{jsonData.results[0].EYE_OMEGA_AUTOSHIPS.product[0].name | capitalizeWords}}</div>
+                        </div>
+                        <div class="row g-0">
+                            <div class="col-6 justify-content-center"><img class="img-fluid" src="EYE_OMEGA.png" alt="Eye Omega"></div>
+                            <div class="col-6 g-0">
+                                <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
+                                <p class="card-text purple-card-text">{{jsonData.results[0].EYE_OMEGA_AUTOSHIPS.val}}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-lg card purpleCard g-0">
-                    <div class="row CardHeader purpleCardHeader g-0">
-                        <div class="col">{{jsonData.results[0].EYE_OMEGA_AUTOSHIPS.product[0].name | capitalizeWords}}</div>
-                    </div>
-                    <div class="row g-0">
-                        <div class="col-6 justify-content-center"><img class="img-fluid" src="EYE_OMEGA.png" alt="Eye Omega"></div>
-                        <div class="col-6 g-0">
-                            <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
-                            <p class="card-text purple-card-text">{{jsonData.results[0].EYE_OMEGA_AUTOSHIPS.val}}</p>
+                <div class="col">
+                    <div class="card cyanCard g-0">
+                        <div class="row CardHeader cyanCardHeader g-0">
+                            <div class="col">{{jsonData.results[0].MACULAR_VITAMIN_AUTOSHIPS.product[0].name | capitalizeWords}}</div>
+                        </div>
+                        <div class="row g-0">
+                            <div class="col-6 justify-content-center"><img class="img-fluid" src="MACULAR_VITAMIN.png" alt="Macular Vitamin"></div>
+                            <div class="col-6 g-0">
+                                <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
+                                <p class="card-text cyan-card-text">{{jsonData.results[0].MACULAR_VITAMIN_AUTOSHIPS.val}}</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col-md-4 col-lg card cyanCard g-0">
-                    <div class="row CardHeader cyanCardHeader g-0">
-                        <div class="col">{{jsonData.results[0].MACULAR_VITAMIN_AUTOSHIPS.product[0].name | capitalizeWords}}</div>
-                    </div>
-                    <div class="row g-0">
-                        <div class="col-6 justify-content-center"><img class="img-fluid" src="MACULAR_VITAMIN.png" alt="Macular Vitamin"></div>
-                        <div class="col-6 g-0">
-                            <p class="mt-3 mb-0 patientText">{{ text }}</p>                            
-                            <p class="card-text cyan-card-text">{{jsonData.results[0].MACULAR_VITAMIN_AUTOSHIPS.val}}</p>
-                        </div>
-                    </div>
-                </div>
+                </div>    
             </div>
         </div>
 
