add mb-4 class to all col class

--- a/angularProject.html
+++ b/angularProject.html
@@ -16,7 +16,7 @@
         <div class="container-fluid center-me" ng-controller="PrimaryCtrl">
             <!--PrimaryCtrl=controller ng-controller=define the controller scope-->
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-                <div class="col">
+                <div class="col mb-4">
                     <div class="card blueCard g-0">
                         <div class="row CardHeader blueCardHeader g-0">
                             <div class="col-6 pTag g-0">{{jsonData.results[0].DRY_EYE_AUTOSHIPS.product[0].tag |
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col mb-4">
                     <div class="card blueCard g-0">
                         <div class="row  CardHeader blueCardHeader g-0">
                             <div class="col-6 pTag g-0">{{jsonData.results[0].DRY_EYE_LIQUID_AUTOSHIPS.product[0].tag |
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col mb-4">
                     <div class="card orangeCard g-0">
                         <div class="row CardHeader orangeCardHeader g-0">
                             <div class="col">{{jsonData.results[0].NURETIN_AUTOSHIPS.product[0].name}}</div>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                 </div> 
-                <div class="col">
+                <div class="col mb-4">
                     <div class="card purpleCard g-0">
                         <div class="row CardHeader purpleCardHeader g-0">
                             <div class="col">{{jsonData.results[0].EYE_OMEGA_AUTOSHIPS.product[0].name | capitalizeWords}}</div>
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col mb-4">
                     <div class="card cyanCard g-0">
                         <div class="row CardHeader cyanCardHeader g-0">
                             <div class="col">{{jsonData.results[0].MACULAR_VITAMIN_AUTOSHIPS.product[0].name | capitalizeWords}}</div>
